@@ -8,11 +8,24 @@ import org.apache.commons.beanutils.BeanUtils;
 
 public class FormUtil {
 	
+
 	@SuppressWarnings("unchecked")
 	public static <T> T toModel(Class<T> clazz, HttpServletRequest request) {
 		T object = null;
 		try {
-			object = clazz.newInstance();
+			try {
+				object = clazz.getDeclaredConstructor().newInstance();
+			} catch (IllegalArgumentException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			} catch (NoSuchMethodException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			} catch (SecurityException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
+
 			BeanUtils.populate(object, request.getParameterMap());
 		} catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
 			System.out.print(e.getMessage());
